--- a/server/config.toml
+++ b/server/config.toml
@@ -1,7 +1,7 @@
 [ca_server]
 listen = "localhost:5000"
 hmac_key = "ZjBoW1OfD11lOhNvYZlEmw"
-auth_provider = "builtin://pam"
+auth_provider = "builtin://plainfile?testusers.json"
 server_id = "test_server"
 certificate_store = "./certstore"
 allowed_key_types = [ "ecdsa", "ed25519" ]
