--- a/dev_root/etc/prisma_ca/config.toml
+++ b/dev_root/etc/prisma_ca/config.toml
@@ -6,7 +6,7 @@ allowed_key_types = [ "ecdsa", "ed25519" ]
 # After this many seconds the server will automatically rotate the certs private key
 # and publish the new key
 root_key_type = "ed25519"
-root_key_max_ttl = 3600
+root_key_max_ttl = 2592000
 user_cert_ttl = 72000
 
 [providers.local_keychain_provider]
