--- a/server/Makefile
+++ b/server/Makefile
@@ -2,7 +2,7 @@ PATH:=$(PATH):$(shell go env GOPATH)/bin
 CGO_ENABLED:=1
 
 build: proto
-	go build -o ../bin/ ./...
+	go build -tags "sqlite_secure_delete"  -o ../bin/ ./...
 
 proto:
 	protoc --go_out=. --go_opt=paths=source_relative --experimental_allow_proto3_optional certificate/*.proto
