Code fixes and refactoring plus release process outline

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,2 +1,8 @@
+BUILD_COMMIT:=$(shell git log --pretty=format:'%cs.%H' -n 1)
+BUILD_DATE:=$(shell date -u '+%Y-%m-%dT%H:%M:%SZ')
+VERSION:=$(shell cat version.txt)
+
 build:
-	go build -o ../bin/ ./...
+	go build \
+	-ldflags="-w -s -X main.Version=$(VERSION) -X main.BuildDate=$(BUILD_DATE) -X main.CommitInfo=$(BUILD_COMMIT)" \
+	-gcflags=all="-l -B" -o ../bin/ ./...
