more crypto changes

--- a/client/Makefile
+++ b/client/Makefile
@@ -5,4 +5,4 @@ VERSION:=$(shell cat version.txt)
 build:
 	go build \
 	-ldflags="-w -s -X main.Version=$(VERSION) -X main.BuildDate=$(BUILD_DATE) -X main.CommitInfo=$(BUILD_COMMIT)" \
-	-gcflags=all="-l -B" -o ../bin/ ./...
+	-o ../bin/ ./...
