Works well now and Authenticate is the only unprotected method

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,8 @@
 CGO_ENABLED=1
 PATH=$PATH:$(go env GOPATH)/bin
 
-export CGO_ENABLED PATH
+# Add username and password for client to use in the env
+SHELL_VAULT_USERNAME=root
+SHELL_VAULT_PASSWORD=testtest
+
+export CGO_ENABLED PATH SHELL_VAULT_PASSWORD SHELL_VAULT_USERNAME
