--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libprisma"]
 	path = libprisma
-	url = git@github.com:stateprism/libprisma.git
+	url = git@github.com:xadaemon/libprisma.git
